# ADBRKGA

ADBRKGA/: README.md
ADBRKGA/Result/: CompareResultADBRKGA.xlsx  OrthogonalResultADBRKGA.xlsx
ADBRKGA/exp_Compare/: ADBRKGA.cpp  ADBRKGA.h  CGA.cpp  CMakeLists.txt  HEFT.cpp  HEFT.h  LWSGA.h  NGA.cpp  filelist_back.txt  main.cpp
ADBRKGA/exp_Compare/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp
ADBRKGA/exp_Orthogonal/: ADBRKGA.cpp  ADBRKGA.h  exp.txt  main.cpp
ADBRKGA/exp_Orthogonal/lib/: CMakeLists.txt  GenOperator.cpp  GenerateAChrom.cpp  classAndVarDefine.cpp  config.cpp  tools.cpp
ADBRKGA/exp_Time/: CGA.cpp  HGA.cpp  HGA.h  LWSGA.cpp  NGA.cpp  main.cpp
Source Code and Data-ADBRKGA/Compare_cnv/: ADBRKGA.cpp  ADBRKGA.h  CGA.cpp  CGA.h  DHEFT.cpp  HEFT.cpp  HGA.cpp  HGA.h  HPSO.cpp  HPSO.h  LWSGA.cpp  LWSGA.h  MOELS.cpp  MOELS.h  main.cpp  result.txt
Source Code and Data-ADBRKGA/Compare_ms/: ADBRKGA.cpp  ADBRKGA.h  CGA.cpp  DHEFT.h  HGA.cpp  HPSO.cpp  IHEFT3.cpp  IHEFT3.h  LWSGA.cpp  MOELS.cpp  MOELS.h  filelist_back(100).txt  main.cpp  result.txt
Source Code and Data-ADBRKGA/Determine_rt/: ADBRKGA.cpp  CGA.cpp  CMakeLists.txt  DHEFT.cpp  HEFT.h  HGA.cpp  HGA.h  HPSO.cpp  HPSO.h  LWSGA.cpp  LWSGA.h  MOELS.cpp  filelist_back(100).txt  main.cpp  result.txt
Source Code and Data-ADBRKGA/Determine_rt/data/: 24_0.7_0.txt
Source Code and Data-ADBRKGA/Determine_rt/include/: GenOperator.h  GenerateAChrom.h  classAndVarDefine.h  common.h  tools.hpp
Source Code and Data-ADBRKGA/Determine_rt/lib/: GenOperator.cpp  config.cpp
(+61 files in other folders)
